k8s/manifests/deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: jitendra222/go-web-app:v1
        ports:
        - containers: 8080
