k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  ports:
  - port: 80
    targetPo: 8080
    protocol: TCP

  selector:
    app: go-web-app
  type: ClusterIP
